wordpress/prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elayvilkom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: elayvilkom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.42.0
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-storage
              mountPath: /prometheus
      volumes:
        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: prometheus-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: elayvilkom
spec:
  ports:
    - port: 9090
  selector:
    app: prometheus
