wordpress/ingress-wordpres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elayvilkom-ingress
  namespace: elayvilkom
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
